--- a/en/apps.html
+++ b/en/apps.html
@@ -33,8 +33,7 @@
         <p class="lead">Some software developed for macOS and iOS,  they're developed as useful tool or just for demonstration purpose.</p>
     </div>
     
-<div class="row">
-
+<div class="row block2">
 <div class="col-md-4">
 <p><a href="metalogic.html"><img src="../images/metalogic/logo.png" class="macapp" /></a></p>
 <h2>MetaLogic</h2>
@@ -53,13 +52,10 @@
 <h2>Sounler</h2>
 <p><a href="sounler.html">Sounler</a> is a small audio player developed to play various of audio format on NES (Nintendo Entertainment System), SNES (Super Nintendo Entertainment System), GBA (Game Boy Advance), WII, NDS, 3DS, N64, GameCube, and PS1 (Sony PlayStation 1), PS2 (Sony PlayStation 2) and PSP (Sony PlayStation Portable), PSX, and Sega Genesis, Sega Mega Drive, Sega Dreamcast, and Microsoft XBOX, and DOS, Amiga, Spectrum and more.</p>
 </div> <!-- col-md-4-->
-
-
 </div><!-- row -->
 
 
-<div class="row">
-
+<div class="row block2">
 <div class="col-md-4">
 <p><a href="speare.html"><img src="../images/speare/logo.png" class="macapp" /></a></p>
 <h2>Speare Code Editor</h2>
@@ -80,14 +76,10 @@
 <p>The small util for making karaoke videos in a comfortable way.<br><br>
 <a href="littlefox.html"><b>LittleFox</b></a> is a small tool designed to help user share audio or video on social websites or make slideshows with speech audio and picture in a simple and efficient way. It was developed to conveniently synthesis subtitle with video or audio without traditional boring works.</p>
 </div> <!-- col-md-4-->
-
-
-
 </div><!-- row -->
 
 
-<div class="row">
-
+<div class="row block2">
 <div class="col-md-4">
 <p><a href="guard.html"><img src="../images/guard/guard7_logo.png" class="macapp" /></a></p>
 <h2>Guard7</h2>
@@ -106,12 +98,9 @@
 <h2>LyricsMaker</h2>
 <p><a href="lyricsmaker.html"><b>LyricsMaker</b></a> is a small tool that was designed to easily make lyrics sheet for music or generate subtitle for movie on macOS.</p>
 </div> <!-- col-md-4-->
-
-
 </div><!-- row -->
 
-<div class="row">
-
+<div class="row block2">
 <div class="col-md-4">
 <p><a href="uftp.html"><img src="../images/uftp/logo.png" class="macapp" /></a></p>
 <h2>uFTP Server</h2>
@@ -126,16 +115,14 @@
 <div class="col-md-4">
 <p></p>
 </div> <!-- col-md-4-->
-
-
 </div><!-- row -->
 
 
-<hr>
+<hr><br><br>
 <h1>iOS Apps</h1>
 <p><br><br><br><br></p>
 
-<div class="row">
+<div class="row block2">
 <div class="col-md-4">
 <p><a href="powerreader.html"><img src="../images/editor/logo.png" class="appicon" /></a></p>
 <p><a href="powerreader.html"><b>iPowerReader</b></a> is a Finder-like file manager on iOS device, you can transfer, delete, rename any file or folder one by one just like in Finder that completely different with translating files with iTunes that required to sync whole folder, it's more intuitive, simple, fast and feel free. You can conveniently share your documents in your iOS devices between Mac, Windows PC, Linux, Android, Unix, PSP and other platforms remotely. 
@@ -156,7 +143,7 @@
 </div><!-- row -->
 
 
-<div class="row">
+<div class="row block2">
 <div class="col-md-4">
 <p><a href="train.html"><img src="../images/train/logo.png" class="appicon" /></a></p>
 <h2>Small Train</h2>
@@ -176,8 +163,9 @@
 
 <p><br><br><br><br></p>
 <h2>About Apple App Store</h2>
-<p><b class="warning">Note: </b>One thing you must know is, they do very bad things on Apple App Store, these gentlemen leaved bad comments on the "ratings and reviews" of some good apps or vice versa to mislead people, so please judge one app's value by yourself instead of what they said.</p>
-
+<p><b class="warning">Note: </b>One thing you must know is, they do very bad things on Apple App Store, these gentlemen leaved bad comments on the "ratings and reviews" of some good apps or vice versa to mislead people, so please judge one app's value by yourself instead of what they said.
+</p>
+<br><br>
 
 
 
