--- a/en/codeeditor.html
+++ b/en/codeeditor.html
@@ -17,6 +17,9 @@
 <title>iCodeEditor, review code on iPad.</title>
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
+<style type="text/css">
+.extraimg { max-width: 320px; margin-left:0;}
+</style>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 </head>
@@ -31,7 +34,8 @@
 <h1>iCodeEditor</h1>
 <h4>Read &amp; Review code on iPad.</h4>
 <p><br><br></p>
-<p><a href="../images/ParaOS.png" target="_blank"><img src="../images/ParaOS.png" class="screenshots"></a><br>
+<p><a href="../images/ParaOS.png" target="_blank">
+<img src="../images/ParaOS.png" class="extraimg screenshots"></a><br>
 </p>
 
 <p>iCodeEditor has been renamed to iOSFinder. <br>
