--- a/en/iosfinder.html
+++ b/en/iosfinder.html
@@ -17,6 +17,9 @@
 <title>iOSFinder, review code on iPad anywhere.</title>
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
+<style type="text/css">
+.extraimg { max-width: 480px; margin-left:0; }
+</style>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 </head>
@@ -36,9 +39,9 @@
         </p>
     </div>
  
+<img src="../images/editor/syn1.png" class="extraimg"><br><br>
+<img src="../images/editor/syn2.png" class="extraimg"><br><br>
 
-<img src="../images/editor/syn1.png" ><br><br>
-<img src="../images/editor/syn2.png" ><br><br>
 
 <h2>Why</h2>
 <p><ul><li>
