--- a/en/lyricsmaker.html
+++ b/en/lyricsmaker.html
@@ -33,7 +33,7 @@
     
 
 
-<p>The app generate accurate lyrics sheet or subtitle file using two file, i.e, an audio or video file and a plain text file, so the text file required to be prepared to match the audio or video content before processing. The app was designed to simplify the work of synchronising subtitle with audio or video. In daily usage scenarios, you needs to listen audio or watch video only once.</p>
+<p>The app generate accurate lyrics sheet or subtitle file using two files, an audio or video file and a plain text file, so the text file should be prepared to match the audio or video content before processing. The app was designed to simplify the work of synchronising subtitle with audio or video. In daily usage scenarios, making a lyrics sheet needs to listen audio or watch video only once.</p>
 
 <p class="greenbig"><span class="strike0">It's free!</span></p>
 <p><a href="https://itunes.apple.com/us/app/lyricsmaker/id1411706886?ls=1&mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p>
@@ -75,7 +75,7 @@ From May 2020, LyricsMaker turned to be a paid app, because thousands of people 
 <a href="littlefox.html">LittleFox</a>, the designedly small util that used to synthesis subtitle with audio and video in a comfortable way.<br>
 
 <span><a href="http://unkown.org/" target="_blank"><img src="../images/unkown-org-logo.png" style="width: 40px;"/></a></span>
- my music video site: <a href="http://unkown.org"> http://unkown.org</a>, my creative artworks made by LyricsMaker and LittleFox.
+ my music video site: <a href="http://unkown.org"> http://unkown.org</a>, my creative artworks made by LyricsMaker and <a href="littlefox.html">LittleFox</a>.
 </p>
 
 <br><br>
