--- a/en/privacy.html
+++ b/en/privacy.html
@@ -188,7 +188,8 @@ In certain circumstances, you have the following data protection rights:<br>
 </li>
 </ul>
 
-Please note that we may ask you to verify your identity before responding to such requests.<br>
+
+<p>Please note that we may ask you to verify your identity before responding to such requests.<br>
 <br>
 You have the right to complain to a Data Protection Authority about our collection and use of your Personal Data. For more information, please contact your local data protection authority in the European Economic Area (EEA).
 </p>
