--- a/en/proverbs.html
+++ b/en/proverbs.html
@@ -647,9 +647,9 @@ too good to be true</p></td>
 </tbody></table><!-- table end -->
 
 
-
-<hr>
-<div class="row">
+<br><br>
+<!--hr-->
+<div class="row block2">
     <div class="col-md-4">
         <h2></h2>
         <p>阿茂整餅 [aa mauh jíng béng] (Mr Stupid makes cakes) → 冇嗰樣整嗰樣 [móuh gó yeuhng jíng gó yeuhng] (does something unnecessary) someone doing something pointless or meaningless; a stupid action.</p>
@@ -680,7 +680,7 @@ too good to be true</p></td>
     </div>
 </div> 
 
-<div class="row">
+<div class="row block2">
     <div class="col-md-4">
         <h2></h2>
         <p>醜婦終須見家翁 [cháu fúh jūng sēui gin gāa yūng] an ugly woman still has to meet her husband's father; to have to do something one would prefer not to do 唔係勒，醜婦終須見家翁，"發個輪"俾曹四睇吓點。 [m̀h haih laak, cháu fúh jūng sēui gin gāa yūng, faat go léun béi chòuh sei tái háah dím] No, I suppose I'd better though I'd rather not, I'll bring Chou to see what's happening.</p>
@@ -711,7 +711,7 @@ too good to be true</p></td>
 </div> 
 
 
-<div class="row">
+<div class="row block2">
     <div class="col-md-4">
         <h2></h2>
         <p>狗上瓦坑 [gáu séuhng ngáah hāang] (a dog goes up the roof → 有條路[yáuh tìuh louh]there is a way) used to accuse someone of behaving secretively, especially of having an extramarital affair.</p>
@@ -742,7 +742,7 @@ too good to be true</p></td>
     </div>
 </div>
 
-<div class="row">
+<div class="row block2">
     <div class="col-md-4">
         <h2></h2>
         <p>牛趙牡丹 [ngàuh jiuh máauh dāan] (cow eating peony → 唔知花定草 [m̀h jī fāa dihng chóu] doesn't know it is a flower or grass) to be undiscriminating, to lack a refined sensibility; to cast pearls before swine.</p>
@@ -773,7 +773,7 @@ too good to be true</p></td>
 </div>
 
 
-<div class="row">
+<div class="row block2">
     <div class="col-md-4">
         <h2></h2>
         <p>死人燈籠 [séi yàhn dāng lùhng] (dead man's lantern → 報大數 [bou daaih sou] report a bigger sum) to exaggerate or inflate a figure; to report a higher figure than is justified by the facts (since three years were often added to the age of an adult who had died when written on the lantern hung outside the house.)</p>
@@ -804,7 +804,7 @@ too good to be true</p></td>
 </div>
 
 
-<div class="row">
+<div class="row block2">
     <div class="col-md-4">
         <h2></h2>
         <p>塘底泥 [tòhng dái nàih] (mud at the bottom of the pool → 水乾至見 [séui gōn ji gin] someone only appears when the pool dries up; someone who only appears when they need a favour, or when they have run out of money (water symbolises money).</p>
@@ -834,7 +834,7 @@ too good to be true</p></td>
     </div>
 </div>
 
-<div class="row">
+<div class="row block2">
     <div class="col-md-4">
         <h2></h2>
         <p>烏蠅嬲/摟馬尾 [wū yīng lāu máah méih] (flies gather on the tail of a horse → 一拍兩散 [yāt paak léuhng saan] one blow disperses two) to break up a joint enterprise or relationship when neither party comes out a winner (sometimes used as a threat during a negotiation).</p>
@@ -859,6 +859,8 @@ too good to be true</p></td>
 <p>
 Hong Kong, Macau, Macao, Canton, Cantonese, Guangzhou, Chinese, China, dictionary, lexicon, grammar, Literature, Linguistics, Moji, Kanji, Hanja, pronunciation, Yale, idiom, slang, dialect, phrases, proverbs, vernacular, jargon, terms, ancient poems, allusions, eulogistic, derogatory terms, enigmas, euphemisms, famous, popular, sayings, sparkling sentences, rustic speech, vulgar speech, spoken language, colloquialisms, slander, regional variety, etymology.<br><br>
 香港, 澳門, 香港話, 廣東話, 粵語, 白話, 南音, 粵謳, 唐話, 語法, 語言學, 耶魯, 字典, 詞彙, 漢字, 發音, 成語, 典故, 諺語, 褒貶語, 隱語, 委婉語, 古語, 俗語, 警語, 詩辭熟句, 粗口。<br><br>
+</p>
+
 <p><strong>Resources for learning Cantonese</strong>, <a href="http://www.sevenuc.com/en/resources.html">materials of book and audio</a>.</p>
 
 <p>Fun with more proverbs in the dictionary app on App Store. <br><br>
