--- a/en/speare.html
+++ b/en/speare.html
@@ -17,6 +17,9 @@
 <title>Crafting code with Speare code editor</title>
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
+<style type="text/css">
+w {color:#ffc8c8; font-weight: bold;}
+</style>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 </head>
@@ -31,7 +34,6 @@
         <p class="lead">
 <a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small, free and friendly code editor, and an ultra lightweight IDE. You can use it to edit source code files, programming and debugging. It was designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements. Speare code editor includes built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise a debugging environment for a new programming language.</p>
     </div>
-    
 
 <p class="greenbig">It's free!</p>
 <p><a href="https://apps.apple.com/us/app/speare/id1473902558?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a><br><br><br><br></p>
@@ -49,13 +51,13 @@
 <li>Fast search and replace in current document, selected folder, opened files and entire project.</li>
 <li>Smoothly edit multiple files that written in different programming languages simultaneously.</li>
 <li>High performance symbol parsing engine for auto-completion and jump-to-definition.</li>
-<li>High performance real-time viewer for colourful file changes.</li>
+<li>Show coloured code block of file changes with editing actions instantly for edited files.</li>
 <li>Powerful built-in code formatter (code beautifier).</li>
 <li>Fast project switching and powerful insisted bookmark management.</li>
 <li>Keeping entire state after quit, the opened files, selection of each file and the cursor location.</li>
 <li>High extensible, built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</li>
 <li>Syntax checking, run code and unit test instantly, unlimited extension by shell scripts.</li>
-<li>Full featured Markdown and HTML5 editor and previewer, run Javascript code instantly, well-support Web development.</li>
+<li>Full featured Markdown and HTML5 editor and previewer, run Javascript code instantly.</li>
 <li>Unlimited go back and forward, automatically remember jump location and current editing locations.</li>
 <li>Preview all kinds of files, image, svg, pdf, office documents, audio and video etc.</li>
 <li>Fonts and colours customisation for the text editor.</li>
@@ -180,8 +182,15 @@ AMPL ASM ASP <gr>AWK</gr> Ada <gr>ActionScript</gr> Active4D AnsiblePlaybook Ant
 <p><b>Speare is very fast!</b><br> Speare developed with pure Cocoa and C components that made it completely different with Javascript & Chromium based on IDE that large number of junk filled inside them, pure native frameworks and C modules made it small, efficient and has ability to leverage all native platform built-in features, e.g. Spell and grammar check, font and text format, unlimited undo, text to speak etc.</p>
 -->
 
-<p><b>Crafting software as small as possible!</b></p>
+<div style="display:none;">
+<h2>Speare on Apple App Store</h2>
+<p>This small code editor is one of the top best-sales developer tool on App Store, thousands of copy have been downloaded from 2019 and people across the planet using it for editing everyday. But Speare even can't be put on the Top 200 free developer tools!  Can't believe that!  Yes! <w>App Store will surprise you if you developed a software that conflict with the benefit of these gentlemen!  Even Speare can easily beat any of the top-sales free code editor, text editor, or paid developer tools such as Markdown editor, HTML editor! Speare still can't display in the top 200 free developer tools to let more people easily find it!</w></p>
 
+<p><b class="greenbig">Note:</b> One thing you must know is, they do very bad things on Apple App Store, these gentlemen leaves bad comments on the "rate and comment" of some good apps or vice versa to mislead people, and even drop off some apps from top-sales when the apps conflict with their benefit, so please judge one app's value by yourself instead of what they said.
+</p>
+</div>
+
+<p><span class="warning">Crafting software as small as possible!</span></p>
 
 
 <h2>Support</h2>
@@ -189,8 +198,6 @@ AMPL ASM ASP <gr>AWK</gr> Ada <gr>ActionScript</gr> Active4D AnsiblePlaybook Ant
 <p>Please kindly report your feature request or issue on OSDN or Github: <br>
 <img src="../images/OSDN_logo.png" style="height:auto;width: 24px;">&nbsp;<a href="https://osdn.net/projects/speare/" target="_blank">https://osdn.net/projects/speare.</a><br>
 <img src="../images/github-logo.png" style="height:24px;width: auto;"><a href="https://github.com/chengdu/Speare" target="_blank">https://github.com/chengdu/Speare.</a></p>
-
-
 
 
 <p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
