--- a/en/about.html
+++ b/en/about.html
@@ -17,6 +17,9 @@
 <title>Sevenuc Consulting</title>
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
+<style type="text/css">
+.extraimg { max-width: 320px; margin-left:0;}
+</style>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 </head>
@@ -31,7 +34,7 @@
 <h1>About</h1>
 <h4>Running things in silence.</h4>
 <p><br><br></p>
-<p><a href="../images/ParaOS.png" target="_blank"><img src="../images/ParaOS.png" class="screenshots"><br>
+<p><a href="../images/ParaOS.png" target="_blank"><img src="../images/ParaOS.png" class="extraimg screenshots"><br>
 </p>
 
 </div> 
