--- a/en/anida.html
+++ b/en/anida.html
@@ -121,7 +121,7 @@ a. Fast decoding speed. Whether running native machine code that compiled from C
 </div>
 
 <h2>Anida Server</h2>
-<b>Anida Server</b></a> is an universal audio format converter that can convert almost any kinds of audio files on Mac OS X, Windows, Linux, Unix, PSP, Xbox and other platforms to Anida audio compression format, the supported audio file formats included but not limited to:<br>
+<p><b>Anida Server</b></a> is an universal audio format converter that can convert almost any kinds of audio files on Mac OS X, Windows, Linux, Unix, PSP, Xbox and other platforms to Anida audio compression format, the supported audio file formats included but not limited to:<br>
 <ul>
      <li>MP3, AAC, M4A, Ogg Vorbis, WMA, FLAC, WAV, APE, AIFF, Musepack, Monkey's Audio, Shorten, WavPack</li>
      <li>Audio format on PSP, Amiga, Palm, WinCE, MTK, Symbain, Ngage, Nintendo, Wii and other platforms: 
@@ -132,6 +132,7 @@ it, xm, s3m, mod, MPC, shn, wv, wvp, ay, gbs, nsf, nsfe, sap
         <em>mp2, amr, ac3, qt, adts, mp3, m4r, wav, 3gp, mpa, sd2, mpeg, ec3, m4a, mp4, mov, snd, aifc, caf, flac, m4b, 3g2, mp1, aac, aiff, aif, au</em>
      </li>
 </ul>
+</p>
 
 
 <h2>Anida SDK</h2>
@@ -152,7 +153,7 @@ it, xm, s3m, mod, MPC, shn, wv, wvp, ay, gbs, nsf, nsfe, sap
 
 <div style="display:none">
 <h2>Download</h2>
-Please click the following link to download the Android app on your mobile phone. The app include the music files mentioned in above comparison table.<br><br>
+<p>Please click the following link to download the Android app on your mobile phone. The app include the music files mentioned in above comparison table.<br><br>
 "Yesterday Once More" is "Chances" to "Heal the World"!<br><br>
 <span class="note">Note: </span>&nbsp;&nbsp;You must allow the app have permission to store music data in SD card. Check the permission settings of the app indicated as below: <br>
 Settings → Apps  →  MyPlayer → Permissions (Storage)<br>
@@ -164,9 +165,8 @@ If you can't see the <b>"Storage"</b> permission option there then you need to d
 <br>
 <b>SHA256 checksum: </b><br>
 d46c408255c49bfc2994f6c56876fe9092903f55d99ec1b2cbc53559e1dc66aa<br>
-<p><br></p>
+</p><br><br>
 </div>
-
 
 <div><h2>Anida Video Format</h2>
 <p>Anida audio codec can be easily merged in FFmpeg library to support self-defined custom video file format, and these video files can be magically reduced to a more smaller size than encoded with AAC audio codec.</p>
