--- a/en/speare.html
+++ b/en/speare.html
@@ -43,23 +43,24 @@ w {color:#ffc8c8; font-weight: bold;}
 
 <h2>Features</h2>
 <p><ul>
-<li>Full featured code editor, powerful symbol parser for 90+ common programming languages.</li>
 <li>Well designed workspace management. Intuitive and concise.</li> 
 <li>Powerful code navigation and call routines tracing ability.</li>
-<li>Fast find edit points by symbol index, bookmark or searching.</li>
+<li>Fast find edit points by symbol index, bookmarks or searching.</li>
 <li>High performance when managing large amount of files and big files.</li>
+<li>Full featured code editor. Powerful symbol parser for 90+ programming languages.</li>
 <li>Fast search and replace in current document, selected folder, opened files and entire project.</li>
 <li>Smoothly edit multiple files that written in different programming languages simultaneously.</li>
 <li>High performance symbol parsing engine for auto-completion and jump-to-definition.</li>
-<li>Show coloured code block of file changes with editing actions instantly for edited files.</li>
+<li>Realtime Diff. Show coloured code block of file changes with editing actions instantly.</li>
+<li>Efficiently manage working on files across exit, re-launch and project switching.</li>
 <li>Powerful built-in code formatter (code beautifier).</li>
 <li>Fast project switching and powerful insisted bookmark management.</li>
 <li>Keeping entire state after quit, the opened files, selection of each file and the cursor location.</li>
-<li>High extensible, built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</li>
+<li>High extensible. Built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</li>
 <li>Syntax checking, run code and unit test instantly, unlimited extension by shell scripts.</li>
 <li>Full featured Markdown and HTML5 editor and previewer, run Javascript code instantly.</li>
 <li>Unlimited go back and forward, automatically remember jump location and current editing locations.</li>
-<li>Preview all kinds of files, image, svg, pdf, office documents, audio and video etc.</li>
+<li>Preview all kinds of files, image, SVG, PDF, office documents, audio and video etc.</li>
 <li>Fonts and colours customisation for the text editor.</li>
 <li>Ultra lightweight.</li>
 </ul></p>
