--- a/403.html
+++ b/403.html
@@ -47,13 +47,13 @@
             </p>
         </div>
         <div class="col-md-6 text-md-right">
-            <a href="http://www.sevenuc.com/en/about.html" class="text-dark">About</a> 
+            <a href="http://www.sevenuc.com/en/about.html class="footer-link"" class="text-dark">About</a> 
             <span class="text-muted mx-2">|</span> 
-            <a href="http://www.sevenuc.com/en/apps.html" class="text-dark">Apps</a>
+            <a href="http://www.sevenuc.com/en/apps.html class="footer-link"" class="text-dark">Apps</a>
                 <span class="text-muted mx-2">|</span>
-                <a href="http://www.sevenuc.com/en/service.html" class="text-dark">Service</a>
+                <a href="http://www.sevenuc.com/en/service.html class="footer-link"" class="text-dark">Service</a>
                 <span class="text-muted mx-2">|</span>
-                <a href="http://www.sevenuc.com/en/contact.html" class="text-dark">Contact</a>
+                <a href="http://www.sevenuc.com/en/contact.html class="footer-link"" class="text-dark">Contact</a>
                 
         </div>
     </div>
