--- a/en/log.html
+++ b/en/log.html
@@ -126,12 +126,13 @@ such as: isutf8(), strlen(), substr(), strchr(), charat(), strtok(), split(), jo
  <footer class="inner">
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2006-2021 Sevenuc Consulting <br>All rights reserved.</span>
-      <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
-      <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
+      <a href="http://www.sevenuc.com/en/about.html" class="footer-link"> About </a>|
+      <a href="http://www.sevenuc.com/en/apps.html" class="footer-link"> Apps </a>|
+      <a href="http://www.sevenuc.com/en/service.html" class="footer-link"> Service </a>|
+      <a href="http://www.sevenuc.com/en/contact.html" class="footer-link"> Contact </a></p></span>
  </footer>
 </div>
-</body></html>
+</body>
+</html>
 
 
