--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -158,7 +158,6 @@ c. Run FFmpeg command directly on Terminal.app: <lt>ffmpeg -i /full/path/of/xxx.
 <p><br></p>
 
 
-
 <footer>
     <div class="row">
         <div class="col-md-6">
@@ -168,13 +167,13 @@ c. Run FFmpeg command directly on Terminal.app: <lt>ffmpeg -i /full/path/of/xxx.
             </p>
         </div>
         <div class="col-md-6 text-md-right">
-            <a href="http://www.sevenuc.com/en/about.html" class="text-dark">About</a> 
+            <a href="http://www.sevenuc.com/en/about.html" class="footer-link">About</a> 
             <span class="text-muted mx-2">|</span> 
-            <a href="http://www.sevenuc.com/en/apps.html" class="text-dark">Apps</a>
+            <a href="http://www.sevenuc.com/en/apps.html" class="footer-link">Apps</a>
                 <span class="text-muted mx-2">|</span>
-                <a href="http://www.sevenuc.com/en/service.html" class="text-dark">Service</a>
+                <a href="http://www.sevenuc.com/en/service.html" class="footer-link">Service</a>
                 <span class="text-muted mx-2">|</span>
-                <a href="http://www.sevenuc.com/en/contact.html" class="text-dark">Contact</a>
+                <a href="http://www.sevenuc.com/en/contact.html" class="footer-link">Contact</a>
                 
         </div>
     </div>
