--- a/en/speare.html
+++ b/en/speare.html
@@ -29,7 +29,7 @@ w {color:#ffc8c8; font-weight: bold;}
 
     <div class="jumbotron">
         <p><img src="../images/speare/logo.png" style="width: 120px;" /></p>
-        <h1>Speare<br><em>Version 1.2.316</em></h1>
+        <h1>Speare<br><em>Version 1.2.325</em></h1>
         <p class="greenbig">The free small IDE for scripting languages.</p>
         <p class="lead">
 <a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small, free and friendly code editor, and an ultra lightweight IDE. You can use it to edit source code files, programming and debugging. It was designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements. Speare code editor includes built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise a debugging environment for a new programming language.</p>
@@ -216,13 +216,13 @@ AMPL ASM ASP <gr>AWK</gr> Ada <gr>ActionScript</gr> Active4D AnsiblePlaybook Ant
             </p>
         </div>
         <div class="col-md-6 text-md-right">
-            <a href="http://www.sevenuc.com/en/about.html" class="text-dark">About</a> 
+            <a href="http://www.sevenuc.com/en/about.html" class="footer-link">About</a> 
             <span class="text-muted mx-2">|</span> 
-            <a href="http://www.sevenuc.com/en/apps.html" class="text-dark">Apps</a>
+            <a href="http://www.sevenuc.com/en/apps.html" class="footer-link">Apps</a>
                 <span class="text-muted mx-2">|</span>
-                <a href="http://www.sevenuc.com/en/service.html" class="text-dark">Service</a>
+                <a href="http://www.sevenuc.com/en/service.html" class="footer-link">Service</a>
                 <span class="text-muted mx-2">|</span>
-                <a href="http://www.sevenuc.com/en/contact.html" class="text-dark">Contact</a>
+                <a href="http://www.sevenuc.com/en/contact.html" class="footer-link">Contact</a>
                 
         </div>
     </div>
