--- a/en/tts.html
+++ b/en/tts.html
@@ -148,7 +148,6 @@ The engine will be finally open source, but not now, please kindly donate me to 
 <p><br></p>
 
 
-
 <footer>
     <div class="row">
         <div class="col-md-6">
@@ -158,13 +157,13 @@ The engine will be finally open source, but not now, please kindly donate me to 
             </p>
         </div>
         <div class="col-md-6 text-md-right">
-            <a href="http://www.sevenuc.com/en/about.html" class="text-dark">About</a> 
+            <a href="http://www.sevenuc.com/en/about.html" class="footer-link">About</a> 
             <span class="text-muted mx-2">|</span> 
-            <a href="http://www.sevenuc.com/en/apps.html" class="text-dark">Apps</a>
+            <a href="http://www.sevenuc.com/en/apps.html" class="footer-link">Apps</a>
                 <span class="text-muted mx-2">|</span>
-                <a href="http://www.sevenuc.com/en/service.html" class="text-dark">Service</a>
+                <a href="http://www.sevenuc.com/en/service.html" class="footer-link">Service</a>
                 <span class="text-muted mx-2">|</span>
-                <a href="http://www.sevenuc.com/en/contact.html" class="text-dark">Contact</a>
+                <a href="http://www.sevenuc.com/en/contact.html" class="footer-link">Contact</a>
                 
         </div>
     </div>
