--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   _\ \/ _ \/ -_) _ `/ __/ -_)
  /___/ .__/\__/\_,_/_/  \__/
     /_/
-Speare Code Editor v1.2.316
+Speare Code Editor v1.2.325
 The free small IDE for scripting languages.
 (c) 2021 http://www.sevenuc.com
 </pre></div>
@@ -76,13 +76,13 @@ The free small IDE for scripting languages.
             </p>
         </div>
         <div class="col-md-6 text-md-right">
-            <a href="http://www.sevenuc.com/en/about.html" class="text-dark">About</a> 
+            <a href="http://www.sevenuc.com/en/about.html" class="footer-link">About</a> 
             <span class="text-muted mx-2">|</span> 
-            <a href="http://www.sevenuc.com/en/apps.html" class="text-dark">Apps</a>
+            <a href="http://www.sevenuc.com/en/apps.html" class="footer-link">Apps</a>
                 <span class="text-muted mx-2">|</span>
-                <a href="http://www.sevenuc.com/en/service.html" class="text-dark">Service</a>
+                <a href="http://www.sevenuc.com/en/service.html" class="footer-link">Service</a>
                 <span class="text-muted mx-2">|</span>
-                <a href="http://www.sevenuc.com/en/contact.html" class="text-dark">Contact</a>
+                <a href="http://www.sevenuc.com/en/contact.html" class="footer-link">Contact</a>
                 
         </div>
     </div>
