--- a/en/resources.html
+++ b/en/resources.html
@@ -71,8 +71,15 @@ Mr. 陳百強/Danny Chan Pak-keung.<br>
 <a href="javascript:void();"><img src="../images/cantonese/Wan_Kwong.jpg" style="margin-top: 1em;margin-bottom: 1em;width:auto;height:170px;"></a>&nbsp;<a href="javascript:void();"><img src="../images/opera.jpg" style="margin-top: 1em;margin-bottom: 1em;width:auto;height:170px;"></a> <br>
 4, *  You should listen the operas and the songs and study the lyrics from Mr. 尹光/Wan Kwong if you want to learn the true Cantonese words and pure pronunciation of Cantonese. <br>
 More fun with music and lyrics from <a href="javascript:void();" target="_blank">Mr. 尹光/Wan Kwong online</a>.<br><br>
+</p>
 
-Should you for some reason need any of the materials, book or audio, don’t hesitate to drop us an email.</p>
+<p>
+<span><a href="http://unkown.org/" target="_blank"><img src="../images/unkown-org-logo.png" style="width: 40px;"/></a></span>
+ my music video site: <a href="http://unkown.org"> http://unkown.org</a>, my creative artworks made by <a href="lyricsmaker.html" target="_blank">LyricsMaker</a> and <a href="littlefox.html" target="_blank">LittleFox</a>.
+</p>
+
+
+<p>For some reason you needs more materials, book or audio, don’t hesitate to drop us an email.</p>
 <p><br></p>
 
 <p><br></p>
