--- a/en/taihaa.html
+++ b/en/taihaa.html
@@ -33,18 +33,19 @@
     </div>
     
 <h2>Why</h2>
-<p>There're so many online fate telling site, but they are not rigorous, serious! Incorrect birth date calculation, incorrect birth eight-character calculation, incorrect fate bone weight calculation, incorrect big luck years calculation, etc. The calculation basis is wrong, and all of the conclusion are wrong, just used to fooling people.</p>
+<p>There're so many online fate telling site, but they are not rigorous, serious! Incorrect birth date calculation, incorrect birth eight-character calculation, incorrect fate bone weight calculation, incorrect big luck years calculation, etc. The calculation basis is wrong, all of these conclusions are wrong, just used to fooling people.</p>
 
 <h2>How the conclusions in the fate analysis report calculated?</h2>
 <p>
 1. A high precision calculator that can convert from solar calendar to lunar calendar or vice versa accurate at one second.<br>
-2. A high precision fate eight-character calculator that many missing rules in common method applied.<br>
-3. Calculate big lucky years based on very accurate time value of 24 solar terms, that must be accurate to one second.<br>
-<span class="green">&nbsp;&nbsp;To get the above accurate time values it requires very big calculation and following many rules. The astronomical data of the 24 solar terms are calculated based on astronomical data provided by the Royal Nautical Almanac and the US Navy Astronomical Meteorological Station.</span><br>
+2. A high precision fate eight-character calculator that applied many missing rules in common calculation method.<br>
+3. Calculate big lucky years based on very accurate time values of 24 solar terms, that must be accurate to one second.<br><br>
+<span class="green">&nbsp;&nbsp;To get the above accurate time values, it requires very big calculation and following many rules. The high precision lunar date-time calculation already extended to AD 6712, values after that year is not accurate to one second. After compare, the calculated result of 24 solar terms in the near 200 years has the completed same result calculated with the astronomical data provided by the Royal Nautical Almanac and the US Navy Astronomical Meteorological Station.</span><br>
 </p>
 
+
 <h2>Intellectual Property Transfer</h2>
-<p>Taihaa has a built-in fate analysis engine that can be developed as fate telling device. This solution is specially designed for embedded systems and it can be developed as standalone machine or handheld device. The engine is completely developed with ANSI C that has a very small size and includes a fate analysis engine and a PDF document printing engine. The business prospects of this system are very broad, and the economic benefits are huge. The device is suitable to installed in various entertainment places. Consumers only needs to scan the CR code with their mobile phone and then the machine can print beautifully paper report. If you are interested in using the source code of the engine to develop commercial product, please contact us for more details.
+<p>Taihaa has a built-in fate analysis engine that can be developed as fate telling device. This solution is specially designed for embedded systems and it can be developed as standalone machine or handheld device. The engine is completely developed with ANSI C that has a very small size and includes a fate analysis engine and a PDF document printing engine. The business prospects of this system are very broad, and the economic benefits are huge. The device is suitable to installed in various entertainment places. Consumers only needs to scan the CR code with their mobile phone and then the machine can print beautifully fate analysis report. If you are interested in using the source code of the engine to develop commercial product, please contact us for more details.
 </p>
 
 
@@ -53,11 +54,10 @@
 <p><b>Taihaa「睇哈」</b> 是一個特意為需要進行祿命分析的人而開發的命術分析工具軟體。該軟體提供八字計算，命數骨重計算、四柱分析、達摩一掌經、紫微斗數及演禽理數，並提供命理相關基本資訊和相應分析，如出生時日五行屬性、星座、性格為人、先天命勢、大運年份、流年運勢、命格分析等相關信息。開發該工具軟體以方便使用者進行便捷的命理計算和分析。 該軟體純屬休閒娛樂性質，切勿盲目迷信。</p>
 
 
-
 <h2>Why</h2>
 <p>網路上有很多算命的軟體，但係佢哋並唔嚴謹，嚴肅！ 出生日期計算錯著，生辰八字計算錯著，命骨計算錯著，大運年份計算錯誤等。 計算依據係錯的，所有的結論也都係陰人嘅，都係錯的。</p>
 
-<p><a href="https://itunes.apple.com/us/app/taihaa/id1457696997?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br>
+<p><a href="https://itunes.apple.com/us/app/taihaa/id1457696997?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br>
 <p>If you can't open the link above, please launch App Store and found Taihaa by searching.</p>
 
 
@@ -65,8 +65,8 @@
 <p>
 1.  高精度公曆與農曆轉換器，日期計算器，要求高精度計算。精確到秒。<br>
 2.  高精度八字計算器。包含應用到一些普通算法沒有的規則。<br>
-3.  根據高精準的農曆24節氣計算大運年月，精確到秒。<br>
-&nbsp;&nbsp;<span class="green">要獲得上述這些準確的時間值，需要進行大量計算並遵循許多規則。 二十四節氣的天文資料是根據英國皇家航海曆書局及美國海軍天文氣象台提供的天文數據計算。</span><br>
+3.  根據高精準的農曆24節氣計算大運年月，精確到秒。<br><br>
+&nbsp;&nbsp;<span class="green">要獲得上述這些準確的時間值，需要進行大量計算並遵循許多規則。 農曆可精確計算至西元6712年，西元6712年之後計算結果有誤差，通過比對近200年農曆計算結果，與根據英國皇家航海曆書局及美國海軍天文氣象台提供的天文數據計算出之結果完全一致。</span><br>
 </p>
 
 
@@ -120,7 +120,6 @@
 
 <br><br>
 <hr>
-
 
 <h2>商務合作-智慧財產權轉讓</h2>
 <p><img src="../images/Taihaa/fate-machine.png" class="screenshots"/><br></p>
