--- a/en/speare.html
+++ b/en/speare.html
@@ -203,9 +203,10 @@ AMPL ASM ASP <gr>AWK</gr> Ada <gr>ActionScript</gr> Active4D AnsiblePlaybook Ant
 
 <p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
 
+<p><span class="warning">The colour scheme of this site was originally created by sevenuc.com, but some sites use it without our authority! such as github.com etc.</span></p>
+
+
 <p><br><br><br><br></p>
-
-
 
 <footer>
     <div class="row">
