--- a/en/speare.html
+++ b/en/speare.html
@@ -51,7 +51,8 @@ w {color:#ffc8c8; font-weight: bold;}
 <li>Fast search and replace in current document, selected folder, opened files and entire project.</li>
 <li>Smoothly edit multiple files that written in different programming languages simultaneously.</li>
 <li>High performance symbol parsing engine for auto-completion and jump-to-definition.</li>
-<li>Realtime Diff. Show coloured code block of file changes with editing actions instantly.</li>
+<li>Parallel editing. Fast editing two arbitrary files in parallel text views.</li>
+<li>Real-time Diff. Show coloured code block of file changes with editing actions instantly.</li>
 <li>Efficiently manage working on files across exit, re-launch and project switching.</li>
 <li>Powerful built-in code formatter (code beautifier).</li>
 <li>Fast project switching and powerful insisted bookmark management.</li>
