--- a/en/speare.html
+++ b/en/speare.html
@@ -142,19 +142,21 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 
 
 <h2>Productive helps to fast find editing points</h2>
-<p>1. Click toolbar "Functions" to fast find the location of function definitions.<br>
-2. Click toolbar "Breakpoints" to fast find the bookmarks placed for editing locations.<br>
-3. Search symbol references and fast find the location of the reference points, do this for current file can improve productivity too.<br>
-4. Fast click leftmost or rightmost of the opened tabs, or drag tab to rearrange position of editing files.<br>
-5. Drag file or folder in workspace to rearrange its position.<br>
-6. Search files by filename in the workspace.<br>
-7. Use "Jump To Definition" to find the reference points, and click "Back" to return to jump point.<br>
+<p>
+1. Use "Recent List" to fast find recent opened and edited files.<br>
+2. Use "Functions" to fast find the location of function definitions.<br>
+3. Use "Bookmarks" to fast find the bookmarks placed for editing locations.<br>
+4. Search symbol references and fast find the location of the reference points.<br>
+5. Use parallel editing to fast edit files.<br>
+6. Drag file or folder in the workspace to re-arrange its position.<br>
+7. Search items in the workspace.<br>
+8. Use "Jump To Definition" to find the reference points, and click "Go Back" to return to jump point.<br>
+9. Use "Changes" to fast find file changes.
 </p>
 
 
 <h2>Lite Mode</h2>
-<p>Click <span><img src="../images/speare/left.png" class="button" /></span> siding button on toolbar and then click menu "View → Hide Toolbar".<br>
-"Lite Mode" can turn Speare to be a TextEdit-like text editor but has more features, such as line number display, syntax highlighting etc. "Lite Mode" can be remembered and continually keeping, it can be turned off by click menu "View → Show Toolbar". This function is useful and feels more light when open and edit several files but not work on a project that has large number of files.
+<p>Click main menu "View" → "Hide Toolbar". "Lite Mode" can turn Speare to be a concise text editor that let user feels more light when open and edit several files but not work on a project that has a large number of files. Under "Lite Mode", please switch workspace views by select menu items of "Navigate" replace of click toolbar items.
 </p>
 
 
