--- a/en/debugger.html
+++ b/en/debugger.html
@@ -19,6 +19,9 @@
 <link rel="stylesheet" href="../css/stylesheet.css">
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
+<style type="text/css">
+.toolbar { width: auto; height: 22pt; }
+</style>
 </head>
 <body>
 
@@ -52,9 +55,9 @@ Screenshot of debugging <a href="https://sqlite.org/" target="_blank">SQLite</a>
 
 
 <h2>Debug Mode</h2>
-<p>1. Click <span><img src="../images/speare/bottom.png" class="button" /></span> siding bottom button to show the debug toolbar.</p>
+<p>1. Click main menu "Navigate" → "Toggle Output", to show the debug toolbar.</p>
 <p>2. Debug toolbar:<br><br>
-<a href="../images/speare/debug_toolbar.png" target="_blank"><span><img src="../images/speare/debug_toolbar.png" /></span></a><br><br>
+<a href="../images/speare/debug_toolbar.png" target="_blank"><span><img src="../images/speare/debug_toolbar.png" class="toolbar"/></span></a><br><br>
 From left to right, Start, Stop, Step Into, Step Out, Run To, Step Over, Show Watches. The "Step Over" is equals to "Step next", and "Step To" is equals to "Continue" in common debugging words, and the "Step To" is the command that tell the debugger run to meet a breakpoint or an exception occurred or the program meet exit. On the rightmost there are three other function units, they are, search items in the stackview, siding stackview, and clean debug output. <br><br>
 <b>Search in the debug output:</b> click in the output area and use the shortcut key "Control + F" to do the searching.
 </p>
