--- a/en/speare.html
+++ b/en/speare.html
@@ -30,7 +30,7 @@ w {color:#ffc8c8; font-weight: bold;}
     <div class="jumbotron">
         <p><img src="../images/speare/logo.png" style="width: 120px;" /></p>
         <h1>Speare<br><em>Version 1.2.325</em></h1>
-        <p class="greenbig">The free small IDE for scripting languages.</p>
+        <p class="greenbig">The elegant code editor for scripting languages.</p>
         <p class="lead">
 <a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small, free and friendly code editor, and an ultra lightweight IDE. You can use it to edit source code files, programming and debugging. It was designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements. Speare code editor includes built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise a debugging environment for a new programming language.</p>
     </div>
@@ -148,7 +148,7 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 3. Use "Bookmarks" to fast find the bookmarks placed for editing locations.<br>
 4. Search symbol references and fast find the location of the reference points.<br>
 5. Use parallel editing to fast edit files.<br>
-6. Drag file or folder in the workspace to re-arrange its position.<br>
+6. Drag file or folder in the workspace to re-arrange their positions.<br>
 7. Search items in the workspace.<br>
 8. Use "Jump To Definition" to find the reference points, and click "Go Back" to return to jump point.<br>
 9. Use "Changes" to fast find file changes.
@@ -175,10 +175,18 @@ b. Click menu: File → Run External Command.<br>
 </p>
 
 
-
 <h2>Programming Languages and Document Types</h2>
-<p class="small">
-AMPL ASM ASP <gr>AWK</gr> Ada <gr>ActionScript</gr> Active4D AnsiblePlaybook Ant Apache <gr>Applescript</gr> Asciidoc AutoIt Autoconf Automake <gr>Basic</gr> Batch Beta Bibtex <gr>C</gr> C# <gr>C++</gr> CMake CPrePro <gr>CSS</gr> Scss CUDA Clojure Cobol <gr>CoffeeScript</gr> ColdFusion Csound Ctags D DTS DbusIntrospect <gr>Diff</gr> DosBatch PowerShell Dtd Dylan <gr>Eiffel</gr> Elixir Elm <gr>Erlang</gr> eZ Publish F-Script Falcon Flex <gr>Forth</gr> <gr>Fortran</gr> FreeFem++ Fypp GEDCOM Gdbinit Glade <gr>Go</gr> Gradle GraphViz Groovy <gr>Haskell</gr> <gr>HTML</gr> <gr>Haxe</gr> Header IDL ITcl Iniconf Inko JSP Java JavaFX JavaProperties <gr>JavaScript</gr> Json <gr>Julia</gr> Kotlin Kuin LSL LaTeX LdScript Lilypond <gr>Lisp</gr> Logtalk <gr>Lua</gr> M4 MEL Makefile Man <gr>Markdown</gr> <gr>MATLAB</gr> Maven2 MetaPost Metaslang Moose MySQL Myrddin NASL NEURON Nemerle <gr>Objective-C</gr> Octave <gr>Ocaml</gr> Ox PDF <gr>PHP</gr> Parrot <gr>Pascal</gr> Passwd <gr>Perl</gr> <gr>Perl6</gr> Pig Plist Pod PostScript <gr>Prolog</gr> <gr>Processing</gr> Protobuf Puppet PuppetManifest <gr>Python</gr> PythonLoggingConfig QemuHX QtMoc <gr>R</gr> R/S-PLUS RHTML RSpec RelaxNG Rexx Robot <gr>Racket</gr> RpmSpec Rst <gr>Ruby</gr> <gr>mruby</gr> <gr>Rust</gr> SGML SML <gr>SQL</gr> Scala <gr>Scheme</gr> Sedona <gr>Shell</gr> Slang Smalltalk Snippets Stata SuperCollider SVG <gr>Swift</gr> SystemTap SystemdUnit TTCN <gr>Tcl</gr> Tcl/Tk Tex TorqueScript <gr>TypeScript</gr> Udo VB VB.NET VHDL Vera <gr>Verilog</gr> <gr>SystemVerilog</gr> Vim WSDL WindRes <gr>XML</gr> XSD Xquery Xslt Yacc <gr>YAML</gr> YumRepo Zephir</p>
+<p>The built-in parser of Speare code editor can parse tons of common document formats and programming languages.<br><br>
+
+<span class="small">
+AMPL ASM ASP <gr>AWK</gr> Ada <gr>ActionScript</gr> Active4D AnsiblePlaybook Ant Apache <gr>Applescript</gr> Asciidoc AutoIt Autoconf Automake <gr>Basic</gr> Batch Beta Bibtex <gr>C</gr> C# <gr>C++</gr> CMake CPrePro <gr>CSS</gr> Scss CUDA Clojure Cobol <gr>CoffeeScript</gr> ColdFusion Csound Ctags D DTS DbusIntrospect <gr>Diff</gr> DosBatch PowerShell Dtd Dylan <gr>Shell</gr> SQL <gr>Eiffel</gr> Elixir Elm <gr>Erlang</gr> eZ Publish F-Script Falcon Flex <gr>Forth</gr> <gr>Fortran</gr> FreeFem++ Fypp GEDCOM Gdbinit Glade <gr>Go</gr> Gradle GraphViz Groovy <gr>Haskell</gr> <gr>HTML</gr> <gr>Haxe</gr> Header IDL ITcl Iniconf Inko JSP Java JavaFX JavaProperties <gr>JavaScript</gr> Json <gr>Julia</gr> Kotlin Kuin LSL LaTeX LdScript Lilypond <gr>Lisp</gr> EmacsLisp Logtalk <gr>Lua</gr> M4 MEL Makefile Man <gr>Markdown</gr> <gr>MATLAB</gr> Maven2 MetaPost Metaslang Moose MySQL Myrddin Nsis NASL NEURON Nemerle <gr>Objective-C</gr> Octave <gr>Ocaml</gr> Ox PDF <gr>PHP</gr> Parrot <gr>Pascal</gr> Passwd <gr>Perl</gr> <gr>Perl6</gr> Pig Plist Pod PostScript <gr>Prolog</gr> <gr>Processing</gr> Protobuf Puppet PuppetManifest <gr>Python</gr> PythonLoggingConfig PowerShell QemuHX QtMoc <gr>R</gr> R/S-PLUS RHTML RSpec RelaxNG Rexx Robot <gr>Racket</gr> RpmSpec Rst <gr>Ruby</gr> <gr>mruby</gr> <gr>Rust</gr>Sml  Slang, SGML SML <gr>SQL</gr> Scala <gr>Scheme</gr> Sedona <gr>Shell</gr> Slang Smalltalk Snippets Stata SuperCollider SVG <gr>Swift</gr> SystemTap SystemdUnit TTCN <gr>Tcl</gr> Tcl/Tk Tex TorqueScript <gr>TypeScript</gr> Udo VB VB.NET VHDL Vera <gr>Verilog</gr> <gr>SystemVerilog</gr> Vim WSDL WindRes <gr>XML</gr> XSD Xquery Xslt Yacc <gr>YAML</gr> YumRepo Zephir
+</span><br><br>
+
+<span class="small">
+a.The most popular document formarts: Plist, JSON, Markdown, Yaml, SVG, Protobuf, HTML, CSS, SCSS, Man, Asciidoc, Tex, Bibtex, Dtd, Pod, XML, Xslt, Xquery, XSD, Glade, RelaxNG and DbusIntrospect etc. <br>
+b. Configure files: Autoconf, Automake, Make, M4, Makefile, Vim, Kconfig, LdScript, AnsiblePlaybook, Varlink, WSDL, RSpec, QtMoc, WindRes, and Gradle, Ant and Maven2 etc. </span><br><br>
+If you want to add a parser for a particular document format, please download the guide from here: <a href="http://sevenuc.com/download/language_extension_protocol.pdf">language_extension_protocol.pdf</a>.
+</p>
 
 
 <!--
