--- a/en/speare.html
+++ b/en/speare.html
@@ -29,7 +29,7 @@ w {color:#ffc8c8; font-weight: bold;}
 
     <div class="jumbotron">
         <p><img src="../images/speare/logo.png" style="width: 120px;" /></p>
-        <h1>Speare<br><em>Version 1.2.325</em></h1>
+        <h1>Speare<br><em>Version 1.2.344</em></h1>
         <p class="greenbig">The elegant code editor for scripting languages.</p>
         <p class="lead">
 <a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small, free and friendly code editor, and an ultra lightweight IDE. You can use it to edit source code files, programming and debugging. It was designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements. Speare code editor includes built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise a debugging environment for a new programming language.</p>
@@ -74,8 +74,8 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 
 
 <h2 class="dark">What's new</h2>
-<p class="dark">1. Improvement of "Lite Mode", i.e. hide toolbar and left side TreeView, this is useful and feels more light when open and edit several file but not work on a project that has large number of files. This function turn Speare to a TextEdit-like text editor but has more features, such as line number display, syntax highlighting etc.<br>
-2. Highlighting files that has no extension name by recognise its Shebang, i.e. the first line of the text file.
+<p class="dark">1. Improvement of "Lite Mode", i.e. without toolbar and hidden workspace, this is useful and feels more light when open and edit several file but not work on a project that has large number of files. This function turn Speare to a TextEdit-like text editor but has more features, such as line number display, syntax highlighting etc.<br>
+2. Highlighting files that has no extension name by recognise it's Shebang, i.e. the first line of the text file.
 </p>
 
 
@@ -91,7 +91,7 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 <p>If you want to edit source code files on iPad, or review code on iPad, please refer another app developed by me, <a href="powerreader.html">iCodeEditor</a>, an integrated code editor for iPad. Sorry, it's not free.</p>
 
 <h2>Code editor and IDE on macOS</h2>
-<p class="small">Terminal based on text editors such as GNU Emacs and Vim, although they are very cool, but their limitations are also obvious, the elephant in the room. TextMate is my favourite code editor long years ago and until today, but it still lack some features. As a programmer, so many IDE and text editors I've used in the past years, such as the bulky cargos, Visual Studio Code, Atom, Android Studio, Eclipse, ActiveState Komodo, Xcode, NetBeans, Eclipse, and some light cargos, e.g Textadept, CotEditor and TextMate. I never like the bulky cargos, e.g desktop applications that built with NodeJS, React and Electron, Eclipse and Java or .NET and C# based big stuffs. Speare code editor is a small, free and friendly code editor which implements the most important missing features in common code editors, e.g bookmark management and fast locate code lines between multiple files, code block live parsing etc.
+<p class="small">Terminal based on text editors such as GNU Emacs and Vim, although they are very cool, but their limitations are also obvious, the elephant in the room. As a programmer, so many text editor I've used in the past years, such as the bulky cargos, Visual Studio Code, Atom, Android Studio, Eclipse, ActiveState Komodo, Xcode, NetBeans, Eclipse, and some light cargos, e.g Textadept, CotEditor and TextMate. I never like desktop applications that built with NodeJS, React and Electron, Eclipse and Java or .NET and C# based big stuffs. Speare code editor is a small, free and friendly code editor which implements the most important missing features in common code editors, e.g bookmark management, parallel editing, instant diff and fast locate code lines between multiple files, code block live parsing etc.
 </p>
 
 
@@ -126,10 +126,10 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 
 <h2>Why another code editor and IDE on macOS?</h2>
 <p>Although there are so many code editor and IDE available on macOS, but four feature of Speare code editor can make it unique:<br>
-<ol><li><lt>Lightweight.</lt> Most of the code editors on macOS are very heavy, bulky! But Speare code editor is really really ultra light. Only 6.2MB!</li>
+<ol><li><lt>Lightweight.</lt> Most of the code editors on macOS are very heavy, bulky! But Speare code editor is really really ultra light. Only 6.2MB! </li>
 <li><lt>High Performance.</lt> Code editor developed with Javascript or Java have inherent defects that can't keep high performance when handle thousands of files for big project, such as VSCode, Atom, and NetBeans, Eclipse. Speare code editor can handle very big project, for very big C &amp; C++ projects, Java projects, Node projects, and very big game projects! Easily!</li>
 <li><lt>Cost.</lt> Most of them are not free, and even very expensive, such as Sublime Text, CodeRunner and <span class="strike">BBEDIT</span> etc, but Speare code editor is free! Of course, you can kindly purchase the pro version to donate some money to the author, but that is not mandatory.</li>
-<li><lt>Freedom.</lt> Feels light, simple and free. High performance code editor, flexibility to extend the IDE to support special developing requirements and easily add a new programming language to it, most of the IDE on macOS can't give you such ability and freedom, can't give you smoothly coding experience when mixing multiple programming languages for big software projects. In fact, Speare code editor give you very flexible control to extend it to add a new syntax highlighting for special document and a new debugging environment for any programming language.
+<li><lt>Freedom.</lt> Feels light, simple and free. High performance code editor, flexibility to extend it to support special developing requirements and easily add a new programming language, most of these IDE on macOS can't give you such ability and freedom, can't give you smoothly coding experience when mixing multiple programming languages for big software projects. In fact, Speare code editor give you very flexible control to extend it to add syntax highlighting for a special document and debugging environment for a new programming language.
 </li>
 </ol></p>
 
@@ -214,7 +214,7 @@ If you want to add a parser for a particular document format, please download th
 
 <p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
 
-<p><span class="warning">The colour scheme of this site was originally created by sevenuc.com, but some sites use it without our authority! such as github.com etc.</span></p>
+<!--p><span class="warning">The colour scheme of this site was originally created by sevenuc.com, but some sites use it without our authority! such as github.com etc.</span></p-->
 
 
 <p><br><br><br><br></p>
