--- a/en/debugger.html
+++ b/en/debugger.html
@@ -40,7 +40,7 @@ The elegant code editor for scripting languages.
 </pre></p>
         <h1></h1>
         <p class="lead">
-        <a href="speare.html" target="_blank">Speare </a> is a small, free and friendly code editor, and an ultra lightweight IDE. You can use it to edit source code files, programming and debugging. It was designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements. Speare code editor includes built-in debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise a debugging environment for a new programming language.
+        <a href="speare.html" target="_blank">Speare </a> is a small, free and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.
         </p>
     </div>
 
