--- a/en/speare.html
+++ b/en/speare.html
@@ -32,7 +32,7 @@ w {color:#ffc8c8; font-weight: bold;}
         <h1>Speare<br><em>Version 1.2.344</em></h1>
         <p class="greenbig">The elegant code editor for scripting languages.</p>
         <p class="lead">
-<a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small, free and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.</p>
+<a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.</p>
     </div>
 
 <p class="greenbig">It's free!</p>
@@ -128,7 +128,7 @@ Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> in Speare
 <p>Although there are so many code editor and IDE available on macOS, but four feature of Speare code editor can make it unique:<br>
 <ol><li><lt>Lightweight.</lt> Most of the code editors on macOS are very heavy, bulky! But Speare code editor is really really ultra light. Only 6.2MB! </li>
 <li><lt>High Performance.</lt> Code editor developed with Javascript or Java have inherent defects that can't keep high performance when handle thousands of files for big project, such as VSCode, Atom, and NetBeans, Eclipse. Speare code editor can handle very big project, for very big C &amp; C++ projects, Java projects, Node projects, and very big game projects! Easily!</li>
-<li><lt>Cost.</lt> Most of them are not free, and even very expensive, such as Sublime Text, CodeRunner and <span class="strike">BBEDIT</span> etc, but Speare code editor is free! Of course, you can kindly purchase the pro version to donate some money to the author, but that is not mandatory.</li>
+<li><lt>Cost.</lt> Most of the good code editors are very expensive, but Speare code editor is not! Of course, you can kindly purchase the pro version to donate some money to the author, but that is not mandatory.</li>
 <li><lt>Freedom.</lt> Feels light, simple and free. High performance code editor, flexibility to extend it to support special developing requirements and easily add a new programming language, most of these IDE on macOS can't give you such ability and freedom, can't give you smoothly coding experience when mixing multiple programming languages for big software projects. In fact, Speare code editor give you very flexible control to extend it to add syntax highlighting for a special document and debugging environment for a new programming language.
 </li>
 </ol></p>
