--- a/en/speare.html
+++ b/en/speare.html
@@ -37,6 +37,11 @@ w {color:#ffc8c8; font-weight: bold;}
 
 <!--p class="greenbig">It's free!</p-->
 
+<h2>It's not free now!</h2>
+<p>Speare has really good features, such as parallel editing, high performance searching and symbol definition parsing. But after a long time, there's still no people kindly feed back any issue report or feature request, they just use it freely but don't willing to give respect to other's labour. I changed my idea from "Free Forever" to "You should pay for good stuff". The app is really good but they made it down and down, that's made me angry, that's why Speare becomes a paid app from free app. Sorry.
+</p>
+
+
 <p><a href="https://apps.apple.com/us/app/speare/id1473902558?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a><br><br><br><br></p>
 
 <p>If you can't open the link above, please launch App Store and found Speare by searching. <span class="green">Please kindly donate the author</span> by purchasing <a href="debugger.html" target="_blank">the pro version</a> or other app developed by the author, your donation will drive the author to continually improve it, or please kindly recommend this app on your blog or rate this app so that helping other people can more easily find it.</p>
